<resources>
    <string name="app_name">RoomBookerFinal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scanner">Scan QRCode</string>
    <string name="menu_centros">Centros</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_salas">Salas</string>
    <string name="detalhes_sala">Detalhes Sala</string>
    <string name="menu_salas_favoritas">Salas Favoritas</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_historico_reservas">Histórico Reservas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add_reserva">Adicionar Reserva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>