<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scanner" />
        <item
            android:id="@+id/nav_salas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_salas" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reservas" />
        <item
            android:id="@+id/nav_historico_reservas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_historico_reservas" />
        <item
            android:id="@+id/nav_centros"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_centros" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>