<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_historico_reservas"
        android:name="com.pint.roombookerfinal.NavigationUI.historico_reservas.HistoricoReservasFragment"
        android:label="@string/menu_historico_reservas"
        tools:layout="@layout/fragment_historico_reservas" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.pint.roombookerfinal.NavigationUI.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_salas"
        android:name="com.pint.roombookerfinal.NavigationUI.salas.SalasFragment"
        android:label="@string/menu_salas"
        tools:layout="@layout/fragment_salas" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.pint.roombookerfinal.NavigationUI.reservas.ReservasFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas" />
    <fragment
        android:id="@+id/nav_centros"
        android:name="com.pint.roombookerfinal.NavigationUI.centros.CentrosFragment"
        android:label="@string/menu_centros"
        tools:layout="@layout/fragment_centros" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.pint.roombookerfinal.NavigationUI.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>