<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginTop="10dp"
        android:layout_gravity="top"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txt_nav_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginBottom="30dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <ImageView
        android:id="@+id/img_qr_scanner"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/ic_action_qrcode"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_nav_email"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:text="@string/nav_header_subtitle" />

</FrameLayout>